[tool.poetry]
name = "unreasonable-llama"
version = "0.2.8"
description = "HTTP API bindings for llama.cpp built-in server"
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/SteelPh0enix/unreasonable-llama/"
keywords = ["llama.cpp", "llama", "llm", "api", "bindings"]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
numpy = "^2.0.1"
sentencepiece = "^0.2.0"
pyyaml = "^6.0.2"
ruff = "^0.5.5"
ruff-lsp = "^0.0.54"
mypy = "^1.11.0"

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true
disable_error_code = ["type-arg", "valid-type"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
