[tool.poetry]
name = "unreasonable-llama"
version = "0.4.0"
description = "HTTP API bindings for llama.cpp built-in example server"
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/SteelPh0enix/unreasonable-llama/"
keywords = ["llama.cpp", "llama", "llm", "api", "bindings", "stateless"]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
ruff-lsp = "^0.0.57"
mypy = "^1.12.0"

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
